Fixes mobile image overflow on chrome mobile

--- a/main.css
+++ b/main.css
@@ -239,7 +239,7 @@ h6 {
   }
 
   .image-carousel div {
-    height: 100vw;
+    height: 50vh;
     overflow: hidden;
   }
 
